--- a/.github/workflows/MSYS2.yml
+++ b/.github/workflows/MSYS2.yml
@@ -72,7 +72,8 @@ jobs:
           echo "Collecting DLLs and binaries"
           mkdir -p dist
           cp retroarch.exe dist/
-          ldd retroarch.exe | grep "${{ matrix.sys }}" | awk '{print $3}' | grep -i "/${{ toLowerCase(matrix.sys) }}/bin/" | xargs -I {} cp {} dist/
+          MSYS_LOWER=$(echo "${{ matrix.sys }}" | tr '[:upper:]' '[:lower:]')
+          ldd retroarch.exe | grep "${{ matrix.sys }}" | awk '{print $3}' | grep -i "/${MSYS_LOWER}/bin/" | xargs -I {} cp {} dist/
 
       - name: Archive build artifacts
         if: success()
