attempting to fix 2 things

--- a/Makefile.common
+++ b/Makefile.common
@@ -2649,20 +2649,19 @@ ifeq ($(HAVE_ODROIDGO2), 1)
 endif
 
 ifneq ($(findstring Win32,$(OS)),)
-ifneq ($(shell sh -c 'command -v sh'),)  # Check if we have a Unix shell
-# This block executes only if $(OS) contains "Win32" and we're in a Unix shell
-NT_VERSION := $(shell echo "#include <windows.h>" > temp.c && \
-               echo "#ifdef _WIN32_WINNT" >> temp.c && \
-               echo "#define GET_MACRO_VALUE(x) #x" >> temp.c && \
-               echo "#define EXPAND_MACRO_VALUE(x) GET_MACRO_VALUE(x)" >> temp.c && \
-               echo "#pragma message (\"_WIN32_WINNT=\" EXPAND_MACRO_VALUE(_WIN32_WINNT))" >> temp.c && \
-               echo "#endif" >> temp.c && \
-               $(CC) -c temp.c 2>&1 | sed -n 's/^.*_WIN32_WINNT=\(0x[0-9A-Fa-f]\+\).*/\1/p' && \
-               rm -f temp.c temp.o)
+ifneq ($(shell sh -c 'command -v sh'),)
+NT_VERSION := $(shell \
+  echo '#include <windows.h>' > temp.c; \
+  echo '#ifdef _WIN32_WINNT' >> temp.c; \
+  echo '#define GET_MACRO_VALUE(x) #x' >> temp.c; \
+  echo '#define EXPAND_MACRO_VALUE(x) GET_MACRO_VALUE(x)' >> temp.c; \
+  echo '#pragma message("_WIN32_WINNT=" EXPAND_MACRO_VALUE(_WIN32_WINNT))' >> temp.c; \
+  echo '#endif' >> temp.c; \
+  $(CC) -c temp.c 2>&1 | sed -n 's/^.*_WIN32_WINNT=\(0x[0-9A-Fa-f]\+\).*/\1/p'; \
+  rm -f temp.c temp.o)
 
-# Check if NT_VERSION is greater than 0x602
 ifneq ($(NT_VERSION),)
-ifeq ($(shell [ $$(( $(NT_VERSION) )) -gt $$(( 0x602 )) ] && echo true), true)
+ifeq ($(shell [ $$(( $(NT_VERSION) )) -gt $$(( 0x602 )) ] && echo true),true)
 LIBS += -lxaudio2_9
 endif
 else
@@ -2670,4 +2669,6 @@ $(warning Windows NT version macro (_WIN32_WINNT) is not defined.)
 endif
 endif
 endif
+
+
 ##################################
