--- a/.github/workflows/MSYS2.yml
+++ b/.github/workflows/MSYS2.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        sys: [MINGW64, UCRT64]
+        sys: [MINGW64, UCRT64,CLANG64]
     runs-on: windows-latest
     steps:
       - name: Checkout repository
